--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Global Fishing Watch</title>
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
