add https in cdn amazon and plugin to env

--- a/app/template.html
+++ b/app/template.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Global Fishing Watch</title>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-  <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
-  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css"/>
+  <script src="https://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
+  <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css"/>
 
 </head>
 <body>
