--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>Global Fishing Watch</title>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-  <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
-  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css"/>
+  <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
+  <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css"/>
+
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
