removed main script in html

--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,10 @@
   <title>Global Fishing Watch</title>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
-  <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css"/>
-
-  <link href="styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" media="all" />
+  <link rel="stylesheet" href="styles.css" media="all" />
 </head>
 <body>
-<div id="app"></div>
-<script src="/bundle.js"></script>
+  <div id="app"></div>
 </body>
 </html>
