--- a/app/template.html
+++ b/app/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Global Fishing Watch</title>
-  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=<%= htmlWebpackPlugin.options.key %>"></script>
   <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
   <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css"/>
 
