--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Contact form</title>
-	<link rel="stylesheet" type="text/css" href="/form/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
 	<header>
@@ -20,7 +20,7 @@
 	</header>
 	<section class="pwd">
 		<h1>Thank you!</h1>
-		<p>Thank you for registering to Global Fishing Watch! You will receive anemail confirmation shortly.</p>
+		<p>Thank you for registering to Global Fishing Watch! You will receive an email confirmation shortly.</p>
 	</section>
 </body>
 </html>
