--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Contact form</title>
-	<link rel="stylesheet" type="text/css" href="/form/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
 	<header>
