Static SF pages fixes

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -26,9 +26,10 @@
 			<label for="gfw_password">Password</label>
 			<input type="password" id="gfw_password" placeholder="" required />
 			<input type="submit" value="Login"/>
-			<a href="#" class="cancel">Forgot  your password?</a>
+		<span><a href="#" class="cancel">Forgot  your password?</a>
+			<a href="#" class="cancel">Not a member?</a></span>
 			<hr>
-			<p>Sign in width</p>
+			<p>Sign in with</p>
 			<div class="login_buttons">
 				<a href="#" class="fb">facebook</a>
 				<a href="#" class="go">google</a>
