--- a/public/form/registration.html
+++ b/public/form/registration.html
@@ -56,8 +56,8 @@
 				</div>
 			</div>
 			<div class="tos">
-				<span><input type="checkbox" required /> Accept terms of service</span>
-				<span><input type="checkbox" required /> Accept private policy</span>
+				<span><input type="checkbox" required /> <span>Accept terms of service</span></span>
+				<span><input type="checkbox" required /> <span>Accept private policy</span></span>
 			</div>
 			<input type="submit" value="SEND"/>
 		</form>
