--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -20,7 +20,8 @@
 	</header>
 	<section class="pwd">
 		<h1>Thank you!</h1>
-		<p>Thank you for registering to Global Fishing Watch! You will receive an email confirmation shortly.</p>
+		<p>Thank you for registering to Global Fishing Watch!</p>
+    <p>You will receive an email confirmation shortly.</p>
 	</section>
 </body>
 </html>
