update styles menu publi pages

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -1,22 +1,44 @@
 <html>
+
 <head>
 	<title>Login</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
+
 <body class="bg log">
-	<header>
+	<header class="menu_transparent">
 		<a href="#">
-			<img src="http://globalfishingwatch.org/images/logo.png">
-			global fishing watch
+			<img src="img/gfw_logo_hor_second.png">
 		</a>
-		<nav>
-			<a href="#">map</a>
-			<a href="#">news</a>
-			<a href="#">how to</a>
-			<a href="#">about</a>
-			<a href="#" class="separator"></a>
-			<a href="#" class="selected">login</a>
-		</nav>
+		<ul>
+			<li><a href="#">map</a></li>
+			<li class="dropdown"><a href="#">news</a>
+				<ul class="dropdown_content">
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Articles and Publications</a></li>
+				</ul>
+			</li>
+			<li class="dropdown"><a href="#">how to</a>
+				<ul class="dropdown_content">
+					<li><a href="#">FAQ</a></li>
+					<li><a href="#">Tutorials</a></li>
+					<li><a href="#">Definitions</a></li>
+				</ul>
+			</li>
+			<li class="dropdown"><a href="#">about</a>
+				<ul class="dropdown_content">
+					<li><a href="#">The Project</a></li>
+					<li><a href="#">Partners</a></li>
+					<li><a href="#">Contact us</a></li>
+				</ul>
+			</li>
+			<li><a href="#" class="selected">login</a>
+				<ul class="dropdown_content">
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Articles and Publications</a></li>
+				</ul>
+			</li>
+		</ul>
 	</header>
 	<section class="pwd">
 		<h1>Login</h1>
@@ -25,8 +47,8 @@
 			<input type="email" id="gfw_email" placeholder="email address" required />
 			<label for="gfw_password">Password</label>
 			<input type="password" id="gfw_password" placeholder="" required />
-			<input type="submit" value="Login"/>
-		<span><a href="#" class="cancel">Forgot  your password?</a>
+			<input type="submit" value="Login" />
+			<span><a href="#" class="cancel">Forgot  your password?</a>
 			<a href="#" class="cancel">Not a member?</a></span>
 			<hr>
 			<p>Sign in with</p>
@@ -37,4 +59,5 @@
 		</form>
 	</section>
 </body>
+
 </html>
