Static pages submenus

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -32,12 +32,7 @@
 					<li><a href="#">Contact us</a></li>
 				</ul>
 			</li>
-			<li><a href="#" class="selected">login</a>
-				<ul class="dropdown_content">
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Articles and Publications</a></li>
-				</ul>
-			</li>
+			<li><a href="#" class="selected">login</a></li>
 		</ul>
 	</header>
 	<section class="pwd">
