--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -8,35 +8,30 @@
 		<a href="#">
 			<img src="img/gfw_logo_hor_second.png">
 		</a>
-		<ul>
-			<li><a href="#">map</a></li>
-			<li class="dropdown"><a href="#">news</a>
-				<ul class="dropdown_content">
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Articles and Publications</a></li>
-				</ul>
-			</li>
-			<li class="dropdown"><a href="#">how to</a>
-				<ul class="dropdown_content">
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Tutorials</a></li>
-					<li><a href="#">Definitions</a></li>
-				</ul>
-			</li>
-			<li class="dropdown"><a href="#">about</a>
-				<ul class="dropdown_content">
-					<li><a href="#">The Project</a></li>
-					<li><a href="#">Partners</a></li>
-					<li><a href="#">Contact us</a></li>
-				</ul>
-			</li>
-			<li><a href="#" class="selected">login</a>
-				<ul class="dropdown_content">
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Articles and Publications</a></li>
-				</ul>
-			</li>
-		</ul>
+    <ul>
+      <li><a href="/map">map</a></li>
+      <li class="dropdown"><a href="#">news</a>
+        <ul class="dropdown_content">
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/articles-publications">Articles and Publications</a></li>
+        </ul>
+      </li>
+      <li class="dropdown"><a href="#">how to</a>
+        <ul class="dropdown_content">
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/tutorials">Tutorials</a></li>
+          <li><a href="/definitions">Definitions</a></li>
+        </ul>
+      </li>
+      <li class="dropdown"><a href="#">about</a>
+        <ul class="dropdown_content">
+          <li><a href="/the-project">The Project</a></li>
+          <li><a href="/partners">Partners</a></li>
+          <li><a href="/contact-us">Contact us</a></li>
+        </ul>
+      </li>
+      <li><a href="#" class="selected">login</a></li>
+    </ul>
 	</header>
 	<section class="pwd">
 		<h1>Password reset</h1>
