--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -72,11 +72,11 @@
 	</header>
 	<section class="pwd">
 		<h1>Password reset</h1>
-		<p>Please enter the email address that you used when creating your account.</p>
+		<p id="first_p">Please enter the email address that you used when creating your account.</p>
 		<p>An email will be sent to that address with further instructions on how to reset your password.</p>
 		<form method="post" action="#">
-			<label for="gfw_email">email address</label>
-			<input type="email" id="gfw_email" placeholder="email address" required />
+			<label for="gfw_email">Email address</label>
+			<input type="email" id="gfw_email" placeholder="Email address" required />
 			<input type="submit" value="SEND PASSWORD"/>
 			<a href="#" class="cancel">Cancel</a>
 		</form>
