--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -70,7 +70,7 @@
 			<li><a href="#">Login</a></li>
 		</ul>
 	</header>
-	<section class="pwd">
+	<section class="ty">
 		<h1>Thank you!</h1>
 		<p>Thank you for registering to Global Fishing Watch!</p>
     <p>You will receive an email confirmation shortly.</p>
