create allow access page

--- a/public/form/registration.html
+++ b/public/form/registration.html
@@ -3,7 +3,7 @@
 	<title>Registration</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body class="bg reg">
 	<div class="mobile-menu js-mobile-menu">
@@ -72,8 +72,8 @@
 	</header>
 
 	<section class="reg">
-		<h1>Registration</h1>
 		<form method="post" action="#">
+			<h1>Registration</h1>
 			<div class="column-container">
 				<div class="column l">
 					<label for="gfw_firstname">First name</label>
