--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -3,7 +3,7 @@
 	<title>Password Reset</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body class="bg res">
 	<div class="mobile-menu js-mobile-menu">
@@ -72,7 +72,7 @@
 	</header>
 	<section class="pwd">
 		<h1>Password reset</h1>
-		<p>Please enter the email address that you used when creating your account.</p>
+		<p id="first_p">Please enter the email address that you used when creating your account.</p>
 		<p>An email will be sent to that address with further instructions on how to reset your password.</p>
 		<form method="post" action="#">
 			<label for="gfw_email">email address</label>
