update styles and fix errors

--- a/public/form/allow.html
+++ b/public/form/allow.html
@@ -12,8 +12,8 @@
     <h1>Allow Access?</h1>
     <h2>Pelagos is asking to:</h2>
     <div class="content">
-      <p>Access your basic information Access and manage your data Provide access to your data via the Web Access and manage your Chatter data Provide access to custom applications</p>
-      <p>Allow access to your unique identifier Access custom permissions Access and manage your Wave data Perform requests on your behalf at any time</p>
+      <ul><li>Access your basic information</li> <li>Access and manage your data</li> <li>Provide access to your data via the Web</li> <li>Access and manage your Chatter data</li> <li>Provide access to custom applications</li></ul>
+      <ul><li>Allow access to your unique identifier</li> <li>Access custom permissions</li> <li>Access and manage your Wave data</li> <li>Perform requests on your behalf at any time</li></ul>
     </div>
     <p id="advise_email">Do you want to allow access for example@vizzuality.com? (Not you?)</p>
     <a href="#" id="button_allow">ALLOW</a>
