--- a/public/form/allow.html
+++ b/public/form/allow.html
@@ -15,9 +15,9 @@
       <ul><li>Access your basic information</li> <li>Access and manage your data</li> <li>Provide access to your data via the Web</li> <li>Access and manage your Chatter data</li> <li>Provide access to custom applications</li></ul>
       <ul><li>Allow access to your unique identifier</li> <li>Access custom permissions</li> <li>Access and manage your Wave data</li> <li>Perform requests on your behalf at any time</li></ul>
     </div>
-    <p id="advise_email">Do you want to allow access for example@vizzuality.com? (<a href="#">Not you?</a>)</p>
+    <p id="advise_email">Do you want to allow access for example@vizzuality.com? (<a href="#" class="link_underline">Not you?</a>)</p>
     <a href="#" id="button_allow">ALLOW</a>
-    <p id="allow_deny">Deny</p>
+    <p id="allow_deny" class="link_underline">Deny</p>
     <hr>
     <p>To revoke access at any time, go to your personal settings.</p>
   </section>
