--- a/public/form/login.html
+++ b/public/form/login.html
@@ -43,8 +43,8 @@
 			<label for="gfw_password">Password</label>
 			<input type="password" id="gfw_password" placeholder="" required />
 			<input type="submit" value="Login" />
-			<span><a href="#" class="cancel">Forgot  your password?</a>
-			<a href="#" class="cancel">Not a member?</a></span>
+			<span><a href="#" class="cancel link_underline">Forgot  your password?</a>
+			<a href="#" class="cancel link_underline">Not a member?</a></span>
 			<hr>
 			<p>Sign in with</p>
 			<div class="login_buttons">
