--- a/public/form/allow.html
+++ b/public/form/allow.html
@@ -26,7 +26,7 @@
         <li>Perform requests on your behalf at any time</li>
       </ul>
     </div>
-    <p id="advise_email">Do you want to allow access for example@vizzuality.com? (<a href="#" class="link_underline">Not you?</a>)</p>
+    <p id="advise_email">Do you want to allow access for example@vizzuality.com? <a href="#">(<span class="link_underline">Not you?</span>)</a></p>
     <a href="#" id="button_allow">ALLOW</a>
     <p id="allow_deny"><a class="link_underline" href="#">Deny</a></p>
     <hr>
