--- a/public/form/allow.html
+++ b/public/form/allow.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>Allow acces</title>
+  <title>Allow access</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
