--- a/public/form/registration.html
+++ b/public/form/registration.html
@@ -1,6 +1,8 @@
 <html lang="en">
 <head>
 	<title>Registration</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body class="bg reg">
@@ -34,8 +36,8 @@
     </ul>
 	</header>
 	<section class="reg">
-		<h1>Registration</h1>
 		<form method="post" action="#">
+			<h1>Registration</h1>
 			<div class="column-container">
 				<div class="column l">
 					<label for="gfw_firstname">First name</label>
