--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -1,6 +1,8 @@
 <html lang="en">
 <head>
 	<title>Thank you</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body class="bg ty">
