Fixes the design issues for the login page

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -77,9 +77,9 @@
 		<form method="post" action="#">
 			<h1>Login</h1>
 			<label for="gfw_email">email</label>
-			<input type="email" id="gfw_email" placeholder="email address" required />
+			<input type="email" id="gfw_email" placeholder="Your email" required />
 			<label for="gfw_password">Password</label>
-			<input type="password" id="gfw_password" placeholder="" required />
+			<input type="password" id="gfw_password" placeholder="********" required />
 			<input type="submit" value="Login" />
 			<span><a href="#" class="cancel link_underline">Forgot  your password?</a>
 			<a href="#" class="cancel link_underline">Not a member?</a></span>
