Autoprefixes and minifies the CSS

--- a/public/form/registration.html
+++ b/public/form/registration.html
@@ -3,7 +3,7 @@
 	<title>Registration</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/styles.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
 </head>
 <body class="bg reg">
 	<div class="mobile-menu js-mobile-menu">
