--- a/public/form/login.html
+++ b/public/form/login.html
@@ -4,7 +4,7 @@
 	<title>Login</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/styles.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
 </head>
 
 <body class="bg log">
