--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -3,7 +3,7 @@
 	<title>Thank you</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/styles.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
 </head>
 <body class="bg ty">
 	<div class="mobile-menu js-mobile-menu">
