Resolves most of @nerik comments

--- a/public/form/allow.html
+++ b/public/form/allow.html
@@ -12,14 +12,14 @@
     <h1>Allow Access?</h1>
     <h2>Pelagos is asking to:</h2>
     <div class="content">
-      <ul>
+      <ul class="access-list">
         <li>Access your basic information</li>
         <li>Access and manage your data</li>
         <li>Provide access to your data via the Web</li>
         <li>Access and manage your Chatter data</li>
         <li>Provide access to custom applications</li>
       </ul>
-      <ul>
+      <ul class="access-list">
         <li>Allow access to your unique identifier</li>
         <li>Access custom permissions</li>
         <li>Access and manage your Wave data</li>
