--- a/public/form/registration.html
+++ b/public/form/registration.html
@@ -75,41 +75,41 @@
 		<form method="post" action="#">
 			<h1>Registration</h1>
 			<div class="reg-form">
-				<div>
+				 <div class="item">
 					<label for="gfw_firstname">First name</label>
 					<input type="text" id="gfw_firstname" placeholder="First name" />
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_lastname">last name</label>
 					<input type="text" id="gfw_lastname" placeholder="Last name" required />
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_questiontype">Type of organization</label>
 					<select id="gfw_questiontype">
 						<option>Select a question type</option>
 					</select>
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_questioncountry">Country</label>
 					<select id="gfw_questioncountry">
 						<option>Select a country</option>
 					</select>
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_questionstate">state/province</label>
 					<select id="gfw_questionstate">
 						<option>Select a state</option>
 					</select>
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_zip">Zip code</label>
 					<input type="text" id="gfw_zip" placeholder="Zip code" />
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_email">Email</label>
 					<input type="email" id="gfw_email" placeholder="Email address" required />
 				</div>
-				<div>
+				 <div class="item">
 					<label for="gfw_phone">Phone number</label>
 					<input type="text" id="gfw_phone" placeholder="Phone number" />
 				</div>
