--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -72,7 +72,7 @@
 	</header>
 	<section class="pwd">
 		<h1>Password reset</h1>
-		<p id="first_p">Please enter the email address that you used when creating your account.</p>
+		<p>Please enter the email address that you used when creating your account.</p>
 		<p>An email will be sent to that address with further instructions on how to reset your password.</p>
 		<form method="post" action="#">
 			<label for="gfw_email">Email address</label>
